--- a/app/views/contratos/index.html.erb
+++ b/app/views/contratos/index.html.erb
@@ -27,7 +27,7 @@
         <td><%= contrato.customer.name  %></td>
         <td><%= contrato.medio.descrip  %></td>
         <td><%= contrato.importe %></td>
-        <td><%= contrato.get_moneda %></td>
+        <td><%= contrato.moneda.description  %></td>
         <td><%= contrato.get_contrato %></td>
         <td><%= contrato.nrocuotas %></td>
         <td><%= contrato.comision1 %></td>
