--- a/app/views/contratos/_form.html.erb
+++ b/app/views/contratos/_form.html.erb
@@ -42,21 +42,12 @@
 
     <div class="field">
       <%= f.label :customer_id,"Clientes  " %><br />
-
-    <% if @edit %>
-      <%= f.select :customer_id,options_from_collection_for_select(@customers,'id','name',:selected => @contrato.customer_id)%>
-    <% else %>
-      <%= f.select :customer_id,options_from_collection_for_select(@customers,'id','name') %>
-    <% end %>
-      
+    <%= f.collection_select :customer_id, @customers, :id, :name, :prompt => true %>
     </div>
+    
     <div class="field">
       <%= f.label :medio_id,"Medios  " %><br />
-    <% if @edit %>
-    <%= f.select :medio_id,options_from_collection_for_select(@medios,'id','descrip',:selected => @contrato.medio_id)%>
-    <% else %>
-      <%= f.select :medio_id,options_from_collection_for_select(@medios,'id','descrip') %>
-    <% end %>
+      <%= f.collection_select :medio_id, @medios, :id, :descrip, :prompt => true %>
     </div>
 
     <div class="field">
@@ -67,12 +58,7 @@
 
     <div class="field">
     <%= f.label :moneda_id ,"  "%><br />
-    <% if @edit %>  
-      <%= f.select :moneda_id, options_for_select([["SOLES",1],["DOLARES",2]],:selected=>@contrato.moneda_id) %>
-    <% else %>    
-      <%= f.select :moneda_id, options_for_select([["SOLES",1],["DOLARES",2]]) %>
-    <% end %>  
-
+    <%= f.collection_select :moneda_id, @monedas, :id, :description, :prompt => true %>
     </div>
 
     <div class="field">
