--- a/app/views/reports/rpt_contratos3_pdf.html.erb
+++ b/app/views/reports/rpt_contratos3_pdf.html.erb
@@ -18,8 +18,8 @@ totals = []
   Estado de cuenta 
 </h1>
 
-<form method="get" action="/contratos/rpt_contratos3/<%= @company.id %>">
-  
+
+  <%= form_tag(exportxls_contratos_path, :method => "get") do %>
 
   <div class="field">
     Desde <input type="date" name="fecha1" value="2017-10-01" style = "width: 150px" >
@@ -29,8 +29,9 @@ totals = []
     Hasta <input type="date" name="fecha2" value="2017-11-15" style = "width: 150px" >
   </div>
 
-  <input type="submit" value="Generar Reporte "  />
-</form>
-
+  <%= submit_tag "To PDF", :name => "print" %>
+  <%= submit_tag "To Excel", :name => "print" %>
+     
+<% end %>
 <br />
 
