--- a/app/views/contratos/contrato_rpt.pdf.erb
+++ b/app/views/contratos/contrato_rpt.pdf.erb
@@ -5,29 +5,30 @@
   <h3> Contratos  </h3>
   <h4><%= @fecha1.to_s %>  Hasta: <%= @fecha2.to_s %> </h4>
   <font size="2" face="Courier New" >  
+  
   <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
   <tr bgcolor="#B4D7F7">
     
-    <th>Cuota</th>
-    <th>Valor Venta</th>
-    <th>IGV</th>
-    <th>Total</th>
-    <th>Cuota</th>
-    <th>Fact.Canal</th>
-    <th>Fact.Masa</th>
-    <th>Fec.Cancela</th>
+    <th> Nro  </th>
+    <th> Vmto  </th>
+    <th>Valor <br> Venta</th>
+    <th><br>IGV</th>
+    <th>Total <br> Cuota</th>
+    <th>Fact.<br>Canal</th>
+    <th>Fact.<br>Masa</th>
+    <th>Fecha <br>Cancela</th>
     <th>SIT.</th>
+    <th>Ctrol.</th>
   </tr>
+  </table>
   
- 
-
-    <% a = @contratos_rpt.first %>
-   
+     <% a = @contratos_rpt.first %>
+     
+    <table style=  'font-size:80% ;width:100%'>
     <tr style="font-weight:bold">
     <td>CANAL</td>
     <td> <%= a.medio.descrip %></td>
     <td> <%= a.moneda.symbol %></td>
-    
     <td></td>
     <td></td>
     <td></td>
@@ -44,21 +45,42 @@
     <td></td>
     <td></td>
     <td></td>
-    <td></td>
     </tr>
-     
-            <% lcCanal = "" %>
-            <% lcCliente = "" %>
+  </table>
+  
+  <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
+  <tr bgcolor="#B4D7F7">
+    
+    <td> Contrato </td>
+    <td> <%= a.code %> </td>
+    <td>  <%= a.tipocontrato_id %> </td>
+    <td>Mon: <%= a.get_moneda %></td>
+    <td><%= a.importe %> </td>
+    <td>Cuotas <%= a.nrocuotas %></td>
+    <td>Com1: <%= a.comision1 %> % </td>
+    <td>Com1: <%= a.comision2 %> % </td>
+    <td></td>
+    <td></td>
+  </tr>
+  </table>
+  
+  
+  <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
+      <% lcCanal = a.medio_id %>
+      <% lcCliente = a.customer_id %>
+      
        <% for  product in @contratos_rpt %>
            
             <% @contrato= Contrato.find(product.id)%>
             <% @contrato_details = ContratoDetail.where(contrato_id: @contrato.id)%>
+            
         <%if lcCanal == product.medio_id%>
+        
           <%if lcCliente == product.customer_id %>
             
             <% for product_detail  in @contrato_details %>
                 <tr>
-                <td><%=product_detail.nro %></td>
+                <td><%=product_detail.nro %> <%= product_detail.fecha.strftime("%d/%m/%Y")%></td>
                 <% tax = product_detail.importe - product_detail.vventa  %>
                 <td><%= sprintf("%.2f",product_detail.vventa.to_s)   %> </td>
                 <td><%= sprintf("%.2f",tax.to_s)   %> </td>
@@ -75,84 +97,119 @@
                 </tr>
            <%end %>
           <% else %>
-            
-            <tr>
-    <td></td>
-    <td>TOTAL X CLIENTE </td>
-    <td> </td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
-            <% lcCliente = product.customer_id %>
-            
-            <tr style="font-weight:bold">
-    <td>CLIENTE</td>
-    <td><%= a.customer.ruc %> </td>
-    <td><%= a.customer.name %> </td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
-             <% for product_detail  in @contrato_details %>
-                <tr>
-                  <td><%=product_detail.nro %></td>
-                <% tax = product_detail.importe - product_detail.vventa  %>
-                <td><%= sprintf("%.2f",product_detail.vventa.to_s)   %> </td>
-                <td><%= sprintf("%.2f",tax.to_s)   %> </td>
-                <td><%= sprintf("%.2f",product_detail.importe.to_s)   %></td>
-                <td><%= product_detail.facturacanal %></td>
-                <td><%= product_detail.factura1%></td>
-                <%if product_detail.fechafac1 != nil%>
-                <td> <%= product_detail.fechafac1.strftime("%d/%m/%Y") %></td>
-                <%else%>
-                <td></td>
-                <%end %>
-                <td></td>
-                <td><%= product_detail.sit%> </td>
-                </tr>
-           <%end %>
-          <%end %>
-            
-        <%else%>
-            
-             <tr>
-    <td></td>
-    <td>TOTAL X CLIENTE </td>
-    <td> </td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
           
+                    <table style=  'font-size:80% ;width:100%'>
+                    <tr>
+                    <td></td>
+                    
+                    <td>TOTAL X Contrato </td>
+                    <td> </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    </tr>
+                    
+                    </table>
+          <hr>
+              <% lcCliente = product.customer_id %>
             
-             <tr>
-    <td></td>
-    <td>TOTAL X MEDIO </td>
-    <td> </td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
-            
-            
-           <tr style="font-weight:bold">
+              <table style=  'font-size:80% ;width:100%'>
+              <tr style="font-weight:bold">
+              <td>CLIENTE</td>
+              <td><%= product.customer.ruc %> </td>
+              <td><%= product.customer.name %> </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              </tr>
+              </table>
+              <hr> 
+              <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
+              <tr bgcolor="#B4D7F7">
+                
+                <td> Contrato </td>
+                <td> <%= product.code %> </td>
+                <td>  <%= product.tipocontrato_id %> </td>
+                <td>Mon: <%= product.get_moneda %></td>
+                <td><%= product.importe %> </td>
+                <td>Cuotas <%= product.nrocuotas %></td>
+                <td>Com1: <%= product.comision1 %> % </td>
+                <td>Com1: <%= product.comision2 %> % </td>
+                <td></td>
+                <td></td>
+              </tr>
+              </table>
+              
+  
+                  <table style=  'font-size:80% ;width:100%'>
+                    
+                    
+                           <% for product_detail  in @contrato_details %>
+                              <tr>
+                              <td><%=product_detail.nro %> <%= product_detail.fecha.strftime("%d/%m/%Y")%></td>
+                              <% tax = product_detail.importe - product_detail.vventa  %>
+                              <td><%= sprintf("%.2f",product_detail.vventa.to_s)   %> </td>
+                              <td><%= sprintf("%.2f",tax.to_s)   %> </td>
+                              <td><%= sprintf("%.2f",product_detail.importe.to_s)   %></td>
+                              <td><%= product_detail.facturacanal %></td>
+                              <td><%= product_detail.factura1%></td>
+                              <%if product_detail.fechafac1 != nil%>
+                              <td> <%= product_detail.fechafac1.strftime("%d/%m/%Y") %></td>
+                              <%else%>
+                              <td> / / </td>
+                              <%end %>
+                              <td></td>
+                              <td><%= product_detail.sit%> </td>
+                              </tr>
+                              <%end %>
+                          <%end %>
+                  </table>        
+                    
+                            
+          <%else%>
+          
+            <table style=  'font-size:80% ;width:100%'>
+                    <tr>
+                    <td></td>
+                    
+                    <td>TOTAL X Contrato </td>
+                    <td> </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    </tr>
+                     <hr>       
+                     <tr>
+                    <td></td>
+                    <td>Total x Canal </td>
+                    <td> </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    </tr>
+                            
+                  </table>          
+        
+          
+          
+          
+          
+    <table style=  'font-size:80% ;width:100%'>
+    <tr style="font-weight:bold">
     <td>CANAL</td>
-    <td> <%= a.medio.descrip %></td>
-    <td> <%= a.moneda.symbol %></td>
-    <td></td>
+    <td> <%= product.medio.descrip %></td>
+    <td> <%= product.moneda.symbol %></td>
     <td></td>
     <td></td>
     <td></td>
@@ -162,78 +219,98 @@
   
     <tr style="font-weight:bold">
     <td>CLIENTE</td>
-    <td><%= a.customer.ruc %> </td>
-    <td><%= a.customer.name %> </td>
-    <td></td>
+    <td><%= product.customer.ruc %> </td>
+    <td><%= product.customer.name %> </td>
     <td></td>
     <td></td>
     <td></td>
     <td></td>
     <td></td>
     </tr>
-
-            
-            <%   lcCanal= product.medio_id %>
-            <%   lcCliente = product.customer_id %>
-            
-            
-            
+    
+  
+  </table>
+  
+              <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
+              <tr bgcolor="#B4D7F7">
+                
+                <td> Contrato </td>
+                <td> <%= product.code %> </td>
+                <td>  <%= product.tipocontrato_id %> </td>
+                <td>Mon: <%= product.get_moneda %></td>
+                <td><%= product.importe %> </td>
+                <td>Cuotas <%= product.nrocuotas %></td>
+                <td>Com1: <%= product.comision1 %> % </td>
+                <td>Com1: <%= product.comision2 %> % </td>
+                <td></td>
+                <td></td>
+              </tr>
+              </table>
+          
+                            
+                  <table style=  'font-size:80% ;width:100%'>
+                    
+                    
+                           <% for product_detail  in @contrato_details %>
+                              <tr>
+                              <td><%=product_detail.nro %> <%= product_detail.fecha.strftime("%d/%m/%Y")%></td>
+                              <% tax = product_detail.importe - product_detail.vventa  %>
+                              <td><%= sprintf("%.2f",product_detail.vventa.to_s)   %> </td>
+                              <td><%= sprintf("%.2f",tax.to_s)   %> </td>
+                              <td><%= sprintf("%.2f",product_detail.importe.to_s)   %></td>
+                              <td><%= product_detail.facturacanal %></td>
+                              <td><%= product_detail.factura1%></td>
+                              <%if product_detail.fechafac1 != nil%>
+                              <td> <%= product_detail.fechafac1.strftime("%d/%m/%Y") %></td>
+                              <%else%>
+                              <td> / / </td>
+                              <%end %>
+                              <td></td>
+                              <td><%= product_detail.sit%> </td>
+                              </tr>
+                              
+                              <%end %>
+                     </table>                              
+                  
         <%end %>
+        
+        
+        
+        </table>
+        <%   lcCanal= product.medio_id %>
+        <%   lcCliente = product.customer_id %>
+    
         
         <%end%>
         
-       <% a = @contratos_rpt.last %>
+       <table style=  'font-size:80% ;width:100%'>
+        <tr>
+        <td> </td>
+        <td> </td>
+        <td>Total x Contrato </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        </tr>
+        </table> 
+        <hr>  
+       <table style=  'font-size:80% ;width:100%'>
+        <tr>
+        <td> </td>
+        <td> </td>
+        <td>TOTAL X CANAL </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        </tr>
+        </table>
         
-          
-       <% for product_detail  in @contrato_details %>
-                <tr>
-                  <td><%=product_detail.nro %></td>
-                <% tax = product_detail.importe - product_detail.vventa  %>
-                <td><%= sprintf("%.2f",product_detail.vventa.to_s)   %> </td>
-                <td><%= sprintf("%.2f",tax.to_s)   %> </td>
-                <td><%= sprintf("%.2f",product_detail.importe.to_s)   %></td>
-                <td><%= product_detail.facturacanal %></td>
-                <td><%= product_detail.factura1%></td>
-                <%if product_detail.fechafac1 != nil%>
-                <td> <%= product_detail.fechafac1.strftime("%d/%m/%Y") %></td>
-                <%else%>
-                <td></td>
-                <%end %>
-                <td></td>
-                <td><%= product_detail.sit%> </td>
-                </tr>
-           <%end %>
-                
-              <tr>
-    <td></td>
-    <td>TOTAL X CLIENTE </td>
-    <td> </td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
-          
-
-          <% lcMedio = @contratos_rpt.last.medio_id%>
-            
-              
-             <tr>
-    <td></td>
-    <td>TOTAL X MEDIO </td>
-    <td> </td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
-            
-      
-      </table> 
       </body>
       
       </html>
