--- a/app/views/contratos/contrato_rpt.pdf.erb
+++ b/app/views/contratos/contrato_rpt.pdf.erb
@@ -2,8 +2,8 @@
 <body>
     
   
-  <h3> Contratos  </h3>
-  <h4><%= @fecha1.to_s %>  Hasta: <%= @fecha2.to_s %> </h4>
+  <h4> Contratos  </h4>
+  <h5><%= @fecha1.to_s %>  Hasta: <%= @fecha2.to_s %> </h5>
   <font size="2" face="Courier New" >  
   
   <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
@@ -28,7 +28,7 @@
     <tr style="font-weight:bold">
     <td>CANAL</td>
     <td> <%= a.medio.descrip %></td>
-    <td> <%= a.moneda.symbol %></td>
+    <td> </td>
     <td></td>
     <td></td>
     <td></td>
@@ -101,8 +101,20 @@
                     <table style=  'font-size:80% ;width:100%'>
                     <tr>
                     <td></td>
-                    
-                    <td>TOTAL X Contrato </td>
+                    <td>Total x Contrato </td>
+                    <td> </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    </tr>
+                      
+                      
+                    <tr>
+                    <td></td>
+                    <td>Total x Contrato </td>
                     <td> </td>
                     <td></td>
                     <td></td>
@@ -116,7 +128,7 @@
           <hr>
               <% lcCliente = product.customer_id %>
             
-              <table style=  'font-size:80% ;width:100%'>
+              <table style ='font-size:80% ;width:100%'>
               <tr style="font-weight:bold">
               <td>CLIENTE</td>
               <td><%= product.customer.ruc %> </td>
@@ -128,6 +140,7 @@
               <td></td>
               </tr>
               </table>
+              
               <hr> 
               <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
               <tr bgcolor="#B4D7F7">
@@ -177,7 +190,7 @@
                     <tr>
                     <td></td>
                     
-                    <td>TOTAL X Contrato </td>
+                    <td>Total X Contrato </td>
                     <td> </td>
                     <td></td>
                     <td></td>
@@ -186,8 +199,10 @@
                     <td></td>
                     <td></td>
                     </tr>
-                     <hr>       
-                     <tr>
+                    </table>
+                     <hr>   
+                     <table style=  'font-size:80% ;width:100%'>
+                    <tr>
                     <td></td>
                     <td>Total x Canal </td>
                     <td> </td>
@@ -198,9 +213,8 @@
                     <td></td>
                     <td></td>
                     </tr>
-                            
                   </table>          
-        
+                  <hr>
           
           
           
@@ -209,7 +223,7 @@
     <tr style="font-weight:bold">
     <td>CANAL</td>
     <td> <%= product.medio.descrip %></td>
-    <td> <%= product.moneda.symbol %></td>
+    <td> </td>
     <td></td>
     <td></td>
     <td></td>
@@ -301,7 +315,7 @@
         <tr>
         <td> </td>
         <td> </td>
-        <td>TOTAL X CANAL </td>
+        <td>Total x Canal</td>
         <td></td>
         <td></td>
         <td></td>
@@ -310,6 +324,7 @@
         <td></td>
         </tr>
         </table>
+        <hr>
         
       </body>
       
