--- a/app/views/contratos/contrato_rpt.pdf.erb
+++ b/app/views/contratos/contrato_rpt.pdf.erb
@@ -102,7 +102,7 @@
                     <tr>
                     <td></td>
                     <td>Canceladas :</td>
-                    <td> </td>
+                    <td><% product.get_contrato_canceladas("vventa") %> </td>
                     <td></td>
                     <td></td>
                     <td></td>
