--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -49,7 +49,7 @@
  
     <div class="field">
       <%= f.label :medio_id %><br />
-      <%= f.select :medio_id,options_from_collection_for_select(@medios,'id','descrip') %>
+      <%= f.select :medio_id,options_from_collection_for_select(@medios,'id','full_name') %>
     </div>
 
     <div class="field">
