--- a/app/views/ordens/_productos.html.erb
+++ b/app/views/ordens/_productos.html.erb
@@ -1,5 +1,5 @@
 <%= collection_select(nil, :producto_id, productos, :id, :name,
                      {:prompt   => "Select an Producto"},
-                     {:onchange => "#{ link_to(:url  => {:action => "update_versions"},
+                     {:onchange => "#{ link_to(:url  => {:action => "update_productos"},
                                                       :with => "'producto_id='+value")}"}) %>
 <br/>
