--- a/app/views/contratos/_form.html.erb
+++ b/app/views/contratos/_form.html.erb
@@ -47,7 +47,7 @@
     
     <div class="field">
       <%= f.label :medio_id,"Medios  " %><br />
-      <%= f.collection_select :medio_id, @medios, :id, :descrip, :prompt => true %>
+      <%= f.collection_select :medio_id, @medios, :id, :full_name, :prompt => true %>
     </div>
 
     <div class="field">
