--- a/app/views/medios/index.html.erb
+++ b/app/views/medios/index.html.erb
@@ -1,12 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Medios</h1>
+<h1>Medios </h1>
 
 <table>
   <thead>
     <tr>
-      <th>Descrip</th>
-      <th>Comments</th>
+      <th>Razon Social</th>
+      <th>Grupo</th>
+      <th>Estacion</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +16,11 @@
     <% @medios.each do |medio| %>
       <tr>
         <td><%= medio.descrip %></td>
-        <td><%= medio.comments %></td>
-        <td><%= link_to 'Show', medio %></td>
-        <td><%= link_to 'Edit', edit_medio_path(medio) %></td>
-        <td><%= link_to 'Destroy', medio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= medio.grupo %></td>
+        <td><%= medio.estacion %></td>
+        <td><%= link_to 'Ver', medio %></td>
+        <td><%= link_to 'Editar', edit_medio_path(medio) %></td>
+        <td><%= link_to 'Eliminar', medio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
