--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -30,10 +30,9 @@
 <b>Marca:</b>
   <%= @orden.marca.name %>
 </p>
-<b>Marca:</b>
+<b>Producto:</b>
   <%= @orden.producto.name %>
 </p>
-
 
 <b>Version:</b>
   <%= @orden.version.descrip %>
