--- a/app/views/marcas/_form.html.erb
+++ b/app/views/marcas/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :descrip %><br>
+    <%= f.label :name %><br>
     <%= f.text_field :descrip %>
   </div>
 
