--- a/app/views/marcas/index.html.erb
+++ b/app/views/marcas/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @marcas.each do |marca| %>
       <tr>
-        <td><%= marca.descrip %></td>
+        <td><%= marca.name %></td>
         <td><%= link_to 'Show', marca %></td>
         <td><%= link_to 'Edit', edit_marca_path(marca) %></td>
         <td><%= link_to 'Destroy', marca, method: :delete, data: { confirm: 'Are you sure?' } %></td>
