--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -24,6 +24,26 @@
    Agregar, editar or eliminar marcas .
   </p>
 
+
+<h3>
+    <%= image_tag("product_kit_32.png", :class => "vmiddle") %>
+    <%= link_to "Producto",productos_path  %>
+  </h3>
+
+  <p>
+   Agregar, editar or eliminar producto .
+  </p>
+<%= hr() %>
+  <h3>
+    <%= image_tag("invoice_32.png", :class => "vmiddle") %>
+    <%= link_to "Version", versions_path %>
+  </h3>
+
+  <p>
+     Agregar, editar or eliminar version 
+  </p>
+
+
   <%= hr() %>
 
   <h3>
@@ -36,16 +56,7 @@
   </p>
 
 
-  <%= hr() %>
-  <h3>
-    <%= image_tag("invoice_32.png", :class => "vmiddle") %>
-    <%= link_to "Version", versions_path %>
-  </h3>
-
-  <p>
-     Agregar, editar or eliminar version 
-  </p>
-
+  
 <%= hr() %>
 
 
