--- a/app/views/versions/_form.html.erb
+++ b/app/views/versions/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :descrip %>
-    
+    <%= f.input :producto_id %>
   </div>
 
   <div class="form-actions">
