--- a/app/views/productos/_form.html.erb
+++ b/app/views/productos/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :version_id %>
+    <%= f.input :marca_id %>
   </div>
 
   <div class="form-actions">
