--- a/app/views/marcas/edit.html.erb
+++ b/app/views/marcas/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @marca %> |
-<%= link_to 'Back', marcas_path %>
+<%= link_to 'Ver', @marca %> |
+<%= link_to 'Regresa', marcas_path %>
