--- a/app/views/marcas/index.html.erb
+++ b/app/views/marcas/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Marcas</h1>
+<h1>Listado Marcas</h1>
 
 <table>
   <thead>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Marca', new_marca_path %>
+<%= link_to 'Nuevo Marca', new_marca_path %>
