--- a/app/views/marcas/show.html.erb
+++ b/app/views/marcas/show.html.erb
@@ -5,5 +5,5 @@
   <%= @marca.descrip %>
 </p>
 
-<%= link_to 'Edit', edit_marca_path(@marca) %> |
-<%= link_to 'Back', marcas_path %>
+<%= link_to 'Editar', edit_marca_path(@marca) %> |
+<%= link_to 'Regresa', marcas_path %>
