--- a/app/views/medios/_form.html.erb
+++ b/app/views/medios/_form.html.erb
@@ -19,11 +19,11 @@
   </div>
   
   <div class="field">
-    <%= f.label :grupo, "Grupo" %><br />
+    <%= f.label :grupo, "Tipo Medio" %><br />
     <%= f.text_field :grupo %>
   </div>
   <div class="field">
-    <%= f.label :estacion, "Local- Estacion" %><br />
+    <%= f.label :estacion, "Local/Estacion" %><br />
     <%= f.text_field :estacion %>
   </div>
 
