--- a/app/views/medios/edit.html.erb
+++ b/app/views/medios/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @medio %> |
-<%= link_to 'Back', medios_path %>
+<%= link_to 'Ver', @medio %> |
+<%= link_to 'Regresar', medios_path %>
