--- a/app/views/medios/index.html.erb
+++ b/app/views/medios/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Razon Social</th>
-      <th>Grupo</th>
+      <th>Tipo Medio</th>
       <th>Estacion</th>
       <th colspan="3"></th>
     </tr>
@@ -28,4 +28,13 @@
 
 <br>
 
-<%= link_to 'New Medio', new_medio_path %>
+<%= link_to 'Nuevo Medio', new_medio_path %>
+
+
+
+<h2>Importar Archivo  *.csv"</h2>
+
+<%= form_tag import_medios_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Importar " %>
+<% end %>
