--- a/app/views/medios/index.html.erb
+++ b/app/views/medios/index.html.erb
@@ -31,6 +31,12 @@
 <%= link_to 'Nuevo Medio', new_medio_path %>
 
 
+<%= link_to "CSV", medios_path(format: "csv") %> |
+
+<%= link_to "Excel", medios_path(format: "xls") %>
+
+
+<br>
 
 <h2>Importar Archivo  *.csv"</h2>
 
