--- a/app/views/customers/list_customers.html.erb
+++ b/app/views/customers/list_customers.html.erb
@@ -26,6 +26,10 @@
 </div>
 
 
+
+<%= link_to "Excel", customers_path(format: "xls") %>
+
+
 <h2>Importar Archivo clientes "*.csv"</h2>
 
 <%= form_tag import_customers_path, multipart: true do %>
