--- a/app/views/marcas/index.html.erb
+++ b/app/views/marcas/index.html.erb
@@ -14,9 +14,10 @@
     <% @marcas.each do |marca| %>
       <tr>
         <td><%= marca.name %></td>
-        <td><%= link_to 'Show', marca %></td>
-        <td><%= link_to 'Edit', edit_marca_path(marca) %></td>
-        <td><%= link_to 'Destroy', marca, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= marca.customer.name %></td>
+        <td><%= link_to 'Ver', marca %></td>
+        <td><%= link_to 'Editar', edit_marca_path(marca) %></td>
+        <td><%= link_to 'Eliminar ', marca, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
