--- a/app/views/contratos/index.html.erb
+++ b/app/views/contratos/index.html.erb
@@ -42,6 +42,8 @@
 
 <br>
 
+<%= will_paginate @contratos %>  
+
 <%= link_to 'Nuevo Contrato',new_contrato_path  %>
 
 <h2>Importar Archivo contratos "*.csv"</h2>
