--- a/app/views/marcas/show.html.erb
+++ b/app/views/marcas/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Descrip:</strong>
-  <%= @marca.descrip %>
+  <%= @marca.name  %>
 </p>
 
 <%= link_to 'Editar', edit_marca_path(@marca) %> |
