--- a/app/views/productos/_form.html.erb
+++ b/app/views/productos/_form.html.erb
@@ -1,10 +1,18 @@
 <%= simple_form_for(@producto) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :marca_id %>
-  </div>
+
+   <div class="field">
+      <%= f.label :name, "Producto *", :class => "bold" %><br />
+      <%= f.text_field :name %>
+    </div>
+    
+<div class="field">
+      <%= f.label :marca_id , "Marca*", :class => "bold" %><br />
+      <%= f.collection_select :marca_id, @marcas, :id, :name,{:prompt   => "Seleccione un cliente "} %>
+      </div>
+
+
 
   <div class="form-actions">
     <%= f.button :submit %>
