--- a/app/views/versions/_form.html.erb
+++ b/app/views/versions/_form.html.erb
@@ -1,10 +1,17 @@
 <%= simple_form_for(@version) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :descrip %>
-    <%= f.input :producto_id %>
-  </div>
+  
+   <div class="field">
+      <%= f.label :descrip, "Version  *", :class => "bold" %><br />
+      <%= f.text_field :descrip %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :producto_id , "Marca*", :class => "bold" %><br />
+      <%= f.collection_select :producto_id, @productos, :id, :name,{:prompt   => "Seleccione un cliente "} %>
+      </div>
+
 
   <div class="form-actions">
     <%= f.button :submit %>
