--- a/app/views/versions/edit.html.erb
+++ b/app/views/versions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @version %> |
-<%= link_to 'Back', versions_path %>
+<%= link_to 'Ver', @version %> |
+<%= link_to 'Regresar', versions_path %>
