--- a/app/views/versions/show.html.erb
+++ b/app/views/versions/show.html.erb
@@ -9,5 +9,5 @@
   
 </p>
 
-<%= link_to 'Edit', edit_version_path(@version) %> |
-<%= link_to 'Back', versions_path %>
+<%= link_to 'Editar', edit_version_path(@version) %> |
+<%= link_to 'Regresar', versions_path %>
